--- a/app/src/frontend/styles/colours.css
+++ b/app/src/frontend/styles/colours.css
@@ -80,15 +80,15 @@
 .background-team {
     background-color: #7cbf39;
 }
-.background-sustainability {
+.background-planning {
     background-color: #57c28e;
 }
-.background-community {
+.background-sustainability {
     background-color: #6bb1e3;
 }
-.background-planning {
+.background-dynamics {
     background-color: #aaaaaa;
 }
-.background-like {
+.background-community {
     background-color: #a3916f;
 }
