--- a/app/src/frontend/building/sidebar.css
+++ b/app/src/frontend/building/sidebar.css
@@ -8,6 +8,7 @@
     bottom: 0;
     width: 95%;
     width: calc(100% - 40px);
+    border-right: 1px solid #000;
     z-index: 1001;
     transition: transform 0.3s;
     transform: translateX(0);
@@ -49,15 +50,10 @@
     clear: both;
     text-decoration: none;
     color: #222;
-    padding: 0.75rem 0.25rem 0.5rem 0;
+    padding: 0.75rem 0.25rem 0.5rem 0.75rem;
     z-index: 1000;
-}
-
-@media (min-width: 990px) {
-    .section-header {
-        position: sticky;
-        top: 0;
-    }
+    position: sticky;
+    top: 0;
 }
 .section-header h2,
 .section-header .icon-buttons {
@@ -168,11 +164,11 @@
 /**
  * Data list sections
  */
-
- .section-body {
-     margin-top: 0.75em;
-     padding: 0 0.75em;
- }
+.section-body {
+    margin-top: 0.75em;
+    padding: 0 0.75em 5em 0.75em;
+    min-height: 100vh;
+}
 .data-section .h3 {
     margin: 0;
 }
@@ -217,6 +213,10 @@
 .data-section textarea,
 .data-section select {
     margin: 0 0 0.5em 0;
+}
+.data-section input[type="checkbox"] {
+    position: static;
+    margin-right: 0.5em;
 }
 .data-list dd {
     margin: 0 0 0.5rem;
