Add verification for Facade Data, thread info through frontend

--- a/app/src/frontend/map/legend.css
+++ b/app/src/frontend/map/legend.css
@@ -76,6 +76,10 @@
     flex: 1;
 }
 
+.data-legend li {
+    white-space: nowrap;
+}
+
 .data-legend .key {
     display: inline-block;
     width: 1.3rem;
