Disable buttons (but still show) if not verifiable

--- a/app/src/frontend/building/data-components/verification.css
+++ b/app/src/frontend/building/data-components/verification.css
@@ -1,5 +1,6 @@
 .verification-container {
     font-size: 0.83333rem;
+    margin-bottom: 1em;
 }
 .verification-status {
     padding-right: 0.5em;
