--- a/app/src/frontend/components/tooltip.css
+++ b/app/src/frontend/components/tooltip.css
@@ -4,24 +4,28 @@
 .tooltip-wrap {
     float: right;
     position: relative;
-    top: -3px;
-    right: -4px;
+    margin: 0;
+    padding: 0;
+    padding-right: 0.3em;
 }
-.tooltip-wrap .icon-button svg {
-    margin-top: -2px;
-}
+
 .tooltip {
     text-transform: none;
     text-align: left;
     width: 11em;
     right: 0;
-    top: 27px;
+    top: 100%;
     opacity: 1;
 }
 .tooltip .arrow {
-    right: 7px;
+    right: 0.4em;
 }
 
 .tooltip a {
+    color: rgb(255, 11, 245);
+}
+
+.icon-button.tooltip-hint.active svg,
+.icon-button.tooltip-hint:hover svg {
     color: rgb(255, 11, 245);
 }
