--- a/app/src/frontend/building/categories.css
+++ b/app/src/frontend/building/categories.css
@@ -1,57 +1,37 @@
-/**
- * Data categories
- */
 .data-category-list {
-  padding: 0px 0 10px 9px;
-  list-style: none;
   margin: 0;
-  text-align: left;
-  max-width: 480px;
-}
-.navbar .data-category-list {
-  padding: 0px 0 0px 15px;
-}
-.data-category-list li {
-  position: relative;
-  display: inline-block;
-  vertical-align: bottom;
-  width: 110px;
-  height: 110px;
-  margin: 2px;
-  box-shadow: 0 0 2px 3px #ffffff;
-  transition: box-shadow 0.2s;
-}
-.navbar .data-category-list li {
-  width: 105px;
-  height: 105px;
-}
-.data-category-list li:nth-child(4n) {
-  margin-right: 0;
-}
-.data-category-list li:hover {
-  box-shadow: 0 0 2px 3px #00ffff;
-  z-index: 1;
-}
-.data-category-list a {
-  color: #222;
-  text-decoration: none;
-}
-.data-category-list .category-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0.1em;
+  margin-bottom: 10px;
+  padding: 2px;
   width: 100%;
-  height: 100%;
-}
-.data-category-list .category-link:hover,
-.data-category-list .category-link:active,
-.data-category-list .category-link:focus {
-  color: #222;
+  height: 340px;
+  max-height: 340px;
+  max-width: 470px;
+  
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap; 
+
+  list-style: none;
 }
 
-.data-category-list .category {
-  text-align: center;
-  font-size: 1em;
-  margin: 0 0 0.5em;
+.data-category-list li {
+  box-sizing: border-box;
+  flex-basis: 7rem;
+  flex-grow: 1;
+  max-height: 7em;
+  margin: 2px;
+}
+
+@media(min-width:734px) {
+  .data-category-list li {
+    flex-basis: 24%;
+    height: 6.75rem;
+    flex-grow: 0;
+    max-height: 6.75rem;
+  }
+  
+  .data-category-list li:hover {
+    box-shadow: 0 0 2px 3px #00ffff;
+    z-index: 1;
+  }
 }
