--- a/app/src/frontend/map/search-box.css
+++ b/app/src/frontend/map/search-box.css
@@ -3,48 +3,62 @@
     top: 0.5rem;
     left: 0.5rem;
     z-index: 1000;
-    max-width:80%;
+    max-width:250px;
 }
-.search-box form,
-.search-box .search-box-results {
+
+.search-box-pane {
+    max-height: 2.4rem;
+    overflow: hidden;
+    
     border-radius: 4px;
     background: #fff;
     box-shadow: 0px 0px 1px 1px #222222;
+
+    display: flex;
+    flex-flow: row nowrap;
 }
-.search-box button {
-    margin-bottom: 0;
+
+.search-box .collapse-btn {
+    width: 2rem;
+    flex-shrink: 0;
+    line-height: 2.3rem;
+    text-align: center;
+
+    background-color: transparent;
+    border: none;
 }
+.search-box .collapse-btn.active {
+    cursor: pointer;
+}
+
+.search-box input.form-control {
+    flex: 1;
+    padding: 0.1rem 0.1rem;
+    max-width: 157px;
+}
+.search-box .btn {
+   padding: 0.25rem 0.2rem;
+   margin: 0.1rem;
+   margin-left: 0;
+}
+
 .search-box .search-box-results {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    left: 2rem;
+
     margin-top: 0.25rem;
     list-style: none;
     padding: 0;
     overflow: hidden;
+
+    border-radius: 4px;
+    background: #fff;
+    box-shadow: 0px 0px 1px 1px #222222;
 }
 .search-box-result {
     display: block;
     padding: 0.25rem 0.5rem;
     border-bottom: 1px solid #eee;
-}
-.collapse-btn {
-    position: absolute;
-    top: 0.5rem;
-    left: 0.5rem;
-    z-index: 1000;
-    background: #fff;
-    border-radius: 2px;
-    box-shadow: 0px 0px 1px 1px #222222;
-}
-.search-box .form-control {
-    padding: 0.1rem 0.1rem;
-    width: 180px;
-}
-.search-box .btn {
-   padding: 0.25rem 0.2rem;
-   margin-right: 0.1rem;
-}
-@media (min-width: 990px) {
-    /* The following is a fix (?) for the truncation of the "Search for postcode" text  */
-    .form-inline .form-control {
-        width: 200px;
-    }
 }
