--- a/app/src/frontend/header.css
+++ b/app/src/frontend/header.css
@@ -67,11 +67,17 @@
 .navbar-collapse.collapse {
     transform: translateY(-100vh);
 }
-.navbar .nav-link {
+
+.navbar-collapse {
     padding: .5rem 1rem;
 }
-.navbar hr {
-    height: 2px;
-    width: auto;
-    margin: 1em;
+
+
+.link-note {
+    margin-left: 1em;
+    display: inline-block;
+    text-transform: uppercase;
+    font-size: 70%;
+    font-weight: bold;
+    color: #777;
 }
