--- a/app/src/frontend/building/data-containers/dynamics/dynamics-data-entry.css
+++ b/app/src/frontend/building/data-containers/dynamics/dynamics-data-entry.css
@@ -13,8 +13,8 @@
     border: 1px dashed #cccccc;
 }
 
-.new-record-section {
-    margin-top: 30px;
+.h6 {
+    margin-top: 40px;
 }
 
 .delete-record-button {
