Rewrite map with hooks, add map colour toggle
Map and Legend components rewritten using hooks.
Also, each category can now have multiple available colour scales.
These can be switched using a select dropdown in the legend.

--- a/app/src/frontend/map/legend.css
+++ b/app/src/frontend/map/legend.css
@@ -56,6 +56,16 @@
     }
 }
 
+.map-legend .style-select {
+    background-color: inherit;
+    padding: 0.5rem 0.25rem;
+    margin: 0.25rem 0.5rem;
+    width: auto;
+    font-size: 18px;
+    border: 1px solid;
+    border-radius: 4px;
+}
+
 .map-legend .h4,
 .map-legend p,
 .data-legend {
