--- a/app/src/frontend/building/data-containers/community.css
+++ b/app/src/frontend/building/data-containers/community.css
@@ -1,5 +1,5 @@
 .community-opinion-pane {
     padding-top: 0.5em;
     padding-bottom: 0.5em;
-    border-bottom: 1px dashed gray;
+    border-bottom: 1px solid gray;
 }
