--- a/app/src/frontend/map/legend.css
+++ b/app/src/frontend/map/legend.css
@@ -21,10 +21,6 @@
     box-shadow: 0px 0px 1px 1px #222222;
 }
 
-.map-legend * {
-    flex: 0;
-}
-
 .map-legend .logo {
     display: none;
 }
@@ -87,7 +83,7 @@
 }
 
 .data-legend li {
-    white-space: nowrap;
+    display: flex;
 }
 
 .data-legend .key {
@@ -98,6 +94,7 @@
     vertical-align: middle;
     overflow: hidden;
     border: solid 1px #ddd;
+    flex-shrink: 0;
 }
 
 .data-legend h6 {
