--- a/app/src/frontend/building/edit-history/edit-history.css
+++ b/app/src/frontend/building/edit-history/edit-history.css
@@ -9,7 +9,9 @@
 
 ul[id="first-only"] li{
     display: none;
+    padding-left: 0;
 }
 ul[id="first-only"] li:first-of-type {
     display: block;
+    padding-left: 0;
 }
