--- a/app/src/frontend/building/data-components/numeric-data-entry-with-formatted-link.css
+++ b/app/src/frontend/building/data-components/numeric-data-entry-with-formatted-link.css
@@ -7,3 +7,21 @@
     margin-left: 0.7em;
     margin-right: 0.7em;
 }
+
+.input-lookalike {
+    display: block;
+    width: 100%;
+    height: calc(1.5em + .75rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    text-align: left;
+    border-color: #999;
+    padding: .25rem .5rem;
+}
