--- a/app/src/frontend/map/borough-switcher.css
+++ b/app/src/frontend/map/borough-switcher.css
@@ -1,37 +1,37 @@
-.night-theme {
+.borough-theme {
     filter: grayscale(100%) invert(1);
 }
 
-.light-theme {
+.borough-theme {
     filter: none;
 }
 
-.theme-switcher {
+.borough-switcher {
     z-index: 1000;
     position: absolute;
-    top: 77px;
+    top: 117px;
     right: 10px;
     float: right;
     background: white;
     border-radius: 4px;
 }
-.theme-switcher .btn {
+.borough-switcher .btn {
     margin: 0;
     min-width: 280px;
 }
-.theme-switcher.night .btn {
+.borough-switcher.night .btn {
     color: #fff;
     background-color: #343a40;
     border-color: #343a40;
 }
-.theme-switcher.night .btn:hover {
+.borough-switcher.night .btn:hover {
     color: #343a40;
     background-color: transparent;
     background-image: none;
     border-color: #343a40;
 }
 @media (max-width: 990px){
-    .theme-switcher {
+    .borough-switcher {
         visibility: hidden;
     }
 }
