--- a/app/src/frontend/building/data-components/data-entry-group.css
+++ b/app/src/frontend/building/data-components/data-entry-group.css
@@ -1,6 +1,8 @@
 .data-entry-group-header {
     cursor: pointer;
     position: relative;
+    font-size: 1.1rem;
+    font-weight: 410;
 }
 .data-entry-group-header .data-entry-group-title {
     position: absolute;
