Reorder and rename categories on the grid
As requested in https://github.com/colouring-cities/colouring-core/issues/1

--- a/app/src/frontend/styles/colours.css
+++ b/app/src/frontend/styles/colours.css
@@ -66,13 +66,13 @@
     background-color: #f77d11;
 }
 .background-age {
-    background-color: #ff6161;
+    background-color: #ab8fb0;
 }
 .background-size {
-    background-color: #f2a2b9;
+    background-color: #ff6161;
 }
 .background-construction {
-    background-color: #ab8fb0;
+    background-color: #f2a2b9;
 }
 .background-streetscape {
     background-color: #718899;
@@ -86,7 +86,7 @@
 .background-sustainability {
     background-color: #6bb1e3;
 }
-.background-dynamics {
+.background-resilience {
     background-color: #aaaaaa;
 }
 .background-community {
