--- a/app/src/frontend/building/category-link.css
+++ b/app/src/frontend/building/category-link.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
-    /* padding: 0.1em; */
+    padding: 0.5em;
     width: 100%;
     height: 100%;
   }
