better coloring for formerly pink buttons
fixes #1064

--- a/app/src/frontend/map/map-button.css
+++ b/app/src/frontend/map/map-button.css
@@ -33,26 +33,24 @@
     background-image: none;
     border-color: #343a40;
 }
+.map-switcher-inline.night.no-applicable-state {
+    color: #191b1d;
+}
+.map-switcher-inline.disabled-state,
 .map-button.disabled-state,
 .map-button.disabled-state .btn{
     background-color: #df7474;
 }
+.map-switcher-inline.night.disabled-state,
 .map-button.night.disabled-state,
 .map-button.night.disabled-state .btn{
     background-color: #b03f3f;
-}
-.map-button.disabled .btn:hover {
-    background-color: transparent;
-    background-image: none;
-}
-.map-button.night.disabled .btn:hover {
-    background-color: transparent;
-    background-image: none;
 }
 .map-button.enabled-state {
     color: #75e775;
     background-color: #75e775;
 }
+.map-switcher-inline.enabled-state,
 .map-button.enabled-state .btn{
     background-color: #75e775;
 }
@@ -60,13 +58,13 @@
     color: #448844;
     background-color: #448844;
 }
+.map-switcher-inline.night.enabled-state,
 .map-button.night.enabled-state .btn{
     background-color: #448844;
 }
-.map-button.enabled .btn:hover {
-    background-color: transparent;
-    background-image: none;
-}
+
+.map-switcher-inline.night.no-applicable-state,
+.map-button.enabled .btn:hover,
 .map-button.night.enabled .btn:hover {
     background-color: transparent;
     background-image: none;
@@ -122,3 +120,28 @@
 .parcel-switcher {
     top: 437px;
 }
+
+.map-switcher-inline {
+    border-radius: 4px;
+    /*background: #FFC0CB;*/
+    margin: 12px;
+    min-width: 400px;
+    color: #343a40;
+}
+.map-switcher-inline.night {
+    color: #d4d7da;
+}
+/*
+.map-switcher-inline.night {
+    background: #FFC0CB;
+    color: #fff;
+    background-color: #343a40;
+    border-color: #ff6065;
+}
+.map-switcher-inline.night .btn:hover {
+    color: #343a40;
+    background-color: transparent;
+    background-image: none;
+    border-color: #ff6065;
+}
+*/
