make data entry group work with long titles
may have some unexpected side-effects but testing has not revealed any

--- a/app/src/frontend/building/data-components/data-entry-group.css
+++ b/app/src/frontend/building/data-components/data-entry-group.css
@@ -5,8 +5,7 @@
     font-weight: 410;
 }
 .data-entry-group-header .data-entry-group-title {
-    position: absolute;
-    left: 1rem;
+    padding-left: 0.6rem;
 }
 
 .data-entry-group-count {
