--- a/app/src/frontend/map/map-button.css
+++ b/app/src/frontend/map/map-button.css
@@ -22,6 +22,7 @@
 .map-button .btn:hover {
     color: #fff;
 }
+
 .map-button.night .btn {
     color: #fff;
     background-color: #343a40;
@@ -125,19 +126,11 @@
     color: #343a40;
 }
 .map-switcher-inline.night {
-    color: #d4d7da;
-}
-/*
-.map-switcher-inline.night {
-    background: #FFC0CB;
     color: #fff;
-    background-color: #343a40;
-    border-color: #ff6065;
 }
-.map-switcher-inline.night .btn:hover {
-    color: #343a40;
+.map-switcher-inline.night :hover {
+    color: #d4d7da;
     background-color: transparent;
     background-image: none;
     border-color: #ff6065;
 }
-*/
