--- a/app/src/frontend/building/sidebar.css
+++ b/app/src/frontend/building/sidebar.css
@@ -100,8 +100,8 @@
  */
 .section-body {
     margin-top: 0.75em;
-    padding: 0 0.75em 5em 0.75em;
-    min-height: 80vh;
+    padding: 0 0.75em 1em 0.75em;
+    /*min-height: 80vh;*/
 }
 .data-section .h3 {
     margin: 0;
