Location category tweaks
- Add placeholder data fields
- Add Postcode Regex
- Add OSM ID Regex
- Allow Pattern Data Entry boxes to transform text (to force capitalise, for example)
- Add source links and update tooltips
- Cosmetic tweaks to CSS

--- a/app/src/frontend/building/sidebar.css
+++ b/app/src/frontend/building/sidebar.css
@@ -184,3 +184,16 @@
     padding-top: 0px;
     padding-bottom: 5px;
 }
+
+dd {
+    margin-bottom: 15px;
+}
+
+.uprn-list {
+    margin-top: 10px;
+    margin-bottom: 0px;
+}
+
+.uprn-list li {
+    margin-bottom: 10px;
+}
