--- a/app/src/frontend/map/map-button.css
+++ b/app/src/frontend/map/map-button.css
@@ -111,11 +111,15 @@
 }
 
 .historic-data-switcher {
+    top: 437px;
+}
+
+.historic-map-switcher {
     top: 397px;
 }
 
 .parcel-switcher {
-    top: 437px;
+    top: 477px;
 }
 
 .map-switcher-inline {
