WIP trying to get date picker working

--- a/app/src/frontend/building/sidebar.css
+++ b/app/src/frontend/building/sidebar.css
@@ -197,3 +197,16 @@ dd {
 .uprn-list li {
     margin-bottom: 10px;
 }
+
+.date-picker {
+    margin-left: 10px;
+    max-width: 400px;
+}
+
+.date-picker-label {
+    width: 100px;
+}
+
+.date-picker-label label {
+    margin-top: 8px;
+}
