Change to button size/layout

--- a/app/src/frontend/map/map-button.css
+++ b/app/src/frontend/map/map-button.css
@@ -125,9 +125,12 @@
 .map-switcher-inline {
     border-radius: 4px;
     /*background: #FFC0CB;*/
-    margin: 12px;
-    width: 400px;
+    margin-top: 6px;
+    margin-bottom: 6px;
+    width: 412px;
     color: #343a40;
+    margin-left: 0px;
+    margin-right: 0px;
 }
 .map-switcher-inline.night {
     color: #fff;
@@ -141,4 +144,8 @@
 
 .key-button {
     background-color: paleturquoise !important;
+}
+
+.sub-subcategory-button {
+    width: 395px;
 }
