Add 1940s Aerial Photos from NLS

--- a/app/src/frontend/map/map-button.css
+++ b/app/src/frontend/map/map-button.css
@@ -122,6 +122,10 @@
     top: 477px;
 }
 
+.aerial-photos-map-switcher {
+    top: 517px;
+}
+
 .map-switcher-inline {
     border-radius: 4px;
     /*background: #FFC0CB;*/
