--- a/app/src/frontend/building/sidebar.css
+++ b/app/src/frontend/building/sidebar.css
@@ -197,3 +197,9 @@ dd {
 .uprn-list li {
     margin-bottom: 10px;
 }
+
+.slider-container { 
+    margin-left: 10px;
+    margin-right: 15px;
+    margin-bottom: 50px;
+}
