--- a/app/src/frontend/building/data-components/data-entry-group.css
+++ b/app/src/frontend/building/data-components/data-entry-group.css
@@ -21,6 +21,6 @@
 }
 
 .data-entry-group-body hr {
-    margin: 1.5em 0 1.5em 0;
-    border: 1px dashed #ccc;
+    margin: 1.6em 0 1.6em 0;
+    border: 1px dashed #aaaaaa;
 }
