Add keys/visualisations of Streetscape data
#1264

--- a/app/src/frontend/building/data-containers/community.css
+++ b/app/src/frontend/building/data-containers/community.css
@@ -3,3 +3,9 @@
     padding-bottom: 0.5em;
     border-bottom: 1px solid gray;
 }
+
+.average-score {
+    width: 100%;
+    padding-right: 10px;
+    margin-bottom: 10px;
+}
