Add OpenStreetMap overlay.

--- a/app/src/frontend/map/map-button.css
+++ b/app/src/frontend/map/map-button.css
@@ -126,6 +126,10 @@
     top: 517px;
 }
 
+.openstreetmap-switcher {
+    top: 557px;
+}
+
 .map-switcher-inline {
     border-radius: 4px;
     /*background: #FFC0CB;*/
