--- a/app/src/frontend/building/sidebar.css
+++ b/app/src/frontend/building/sidebar.css
@@ -199,6 +199,7 @@ dd {
 }
 
 .slider-container { 
+    margin-top: 10px;
     margin-left: 10px;
     margin-right: 15px;
     margin-bottom: 50px;
