--- a/app/src/frontend/building/data-containers/community.css
+++ b/app/src/frontend/building/data-containers/community.css
@@ -9,3 +9,10 @@
     padding-right: 10px;
     margin-bottom: 10px;
 }
+
+.subtitle {
+    margin-top: 10px;
+    margin-bottom: 0px;
+    font-size: large;
+    font-weight: bold;
+}
