--- a/app/src/frontend/map/map-button.css
+++ b/app/src/frontend/map/map-button.css
@@ -146,6 +146,10 @@
     background-color: paleturquoise !important;
 }
 
+.key-button-disabled {
+    background-color: lightgrey !important;
+}
+
 .sub-subcategory-button {
     width: 395px;
 }
