WIP Reorganising the Categories
Categories have been renamed, subcategories reordered and keys updated.
The actual filenames and category names in code have not yet been changed.

--- a/app/src/frontend/map/map-button.css
+++ b/app/src/frontend/map/map-button.css
@@ -14,6 +14,7 @@
     float: right;
     background: white;
     border-radius: 4px;
+    margin-bottom: 5px;
 }
 .map-button .btn {
     margin: 0;
