Rename variables and URLs
Change the category variable names and URLs.
Change the colour definitions (and header logo) to match the new categories.

--- a/app/src/frontend/styles/colours.css
+++ b/app/src/frontend/styles/colours.css
@@ -62,31 +62,31 @@
 .background-land-use {
     background-color: #f7ec25;
 }
-.background-typology {
+.background-typology-size {
     background-color: #f77d11;
 }
-.background-age {
+.background-age-history {
     background-color: #f2a2b9;
 }
-.background-size {
+.background-construction-design {
     background-color: #ff6161;
 }
-.background-construction {
+.background-planning-conservation {
     background-color: #ab8fb0;
 }
-.background-street-context {
+.background-retrofit-condition {
     background-color: #718899;
 }
-.background-team {
+.background-energy-performance {
     background-color: #7cbf39;
 }
-.background-planning {
+.background-urban-infrastructure {
     background-color: #57c28e;
 }
-.background-energy-performance {
+.background-water-green-infrastructure {
     background-color: #6bb1e3;
 }
-.background-resilience {
+.background-disaster-management {
     background-color: #aaaaaa;
 }
 .background-community {
