Tweak landing page text.

--- a/app/src/frontend/pages/welcome.css
+++ b/app/src/frontend/pages/welcome.css
@@ -29,7 +29,13 @@
     height: 4em;
 }
 
+.h3 {
+    font-size: 1.4rem;
+    margin-bottom: 0.75rem;
+}
+
 p {
     font-size: 1rem;
-    word-spacing: 105%;
+    word-spacing: -20%;
+    line-height: 1.5;
 }
