--- a/app/src/frontend/map/map-button.css
+++ b/app/src/frontend/map/map-button.css
@@ -109,7 +109,12 @@
 }
 
 .key-button {
+    color: #141619;
     background-color: paleturquoise !important;
+}
+
+.key-button:hover, .key-button-disabled:hover {
+    color: #141619;
 }
 
 .key-button-disabled {
